[gd_scene load_steps=4 format=2]

[ext_resource path="res://levelup/GriasSpark.gd" type="Script" id=1]
[ext_resource path="res://img/levelup/water_egg.png" type="Texture" id=2]
[ext_resource path="res://art_exports/ui_battle/ui_bullet01.png" type="Texture" id=3]

[node name="GriasSpark" type="Node2D"]
script = ExtResource( 1 )

[node name="Core" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Spark1" type="Sprite" parent="."]
position = Vector2( -38.12, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Spark2" type="Sprite" parent="."]
position = Vector2( 0, -10.88 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Spark3" type="Sprite" parent="."]
position = Vector2( -30.496, -30.496 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Spark4" type="Sprite" parent="."]
position = Vector2( 7.424, -7.424 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true
